# scr-onboarding-2026

./: .gitignore  README.md  rfc.txt
instruction_server/: CMakeLists.txt
instruction_server/messages/: CMakeLists.txt  team_request_t.lcm  team_response_t.lcm
instruction_server/src/: client.c  server.c  team_map.c
